k8s/grpc-helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-helloworld-py
  labels:
    app: grpc-helloworld-py
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-helloworld-py
  template:
    metadata:
      labels:
        app: grpc-helloworld-py
    spec:
      imagePullSecrets: 
      - name: ocirsecret    
      containers:
        - name: grpc-helloworld-py
          image: <you-registry>/grpc-demo/grpc-helloworld-py:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
              name: grpc-port
