k8s/http-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  ports:
    - port: 8000
      name: nginx
      targetPort: 80
  selector:
    app: nginx
