k8s/https-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 8443
      name: https
      protocol: https
    tls:
      mode: SIMPLE
      credentialName: istio-example-credential # must be the same as secret
    hosts:
    - "*"
