k8s/grpc-helloworld-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grpc-helloworld-py-vs
spec:
  hosts:
  - "grpc-https.istio-example.com"
  gateways:
  - https-gateway
  http:
  - match:
    - uri:
        prefix: /Greeter/SayHello
    route:
    - destination:
        host: grpc-helloworld-py
        port:
          number: 50051
