k8s/http-nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "grpc-https.istio-example.com"
  gateways:
  - https-gateway
  http:
  - match:
    - uri:
        prefix: "/nginx"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8000
        host: nginx-service
